tests/snapshots/run_wpt_conformance__coreml_reduceL1_float32_1D_tensor_all_positive_integers_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_l1.https.any.js",
    "reduceL1 float32 1D tensor all positive integers default options",
    "coreml",
    "PASS",
)
